<resources>
    <string name="app_name">رأس الكتاب</string>
    <string name="background">backgroundImage</string>
    <string name="font_bold">pr_bold.TTF</string>
    <string name="font_light">pr_light.TTF</string>
    <string name="font_medium">pr_regular.TTF</string>
    <string name="sarketab">کتیب</string>
    <string name="ezdevaj">البراج الزدواج</string>
    <string name="estekhareh">أبجد استخاره</string>
    <string name="shaksghaeb">شرط غائب</string>
    <string name="rava_hajat">تلبية الحاجة</string>
    <string name="choice_name">انتخاب اسم</string>
    <string name="hamzad">اسم التوأم</string>
    <string name="change_name">تفاصیل الإسم</string>
    <string name="birthday">عيد الميلاد</string>
    <string name="hajat">اكتب احتياجاتك</string>
    <string name="target">اسم الشخص المعني</string>
    <string name="input_login_mail">أدخل بريدك الإلكتروني</string>
    <string name="input_login_pass">ادخل رقمك السري</string>
    <string name="Saturday">‫السبت</string>
    <string name="Sunday">الأحد</string>
    <string name="Monday">الاثنين</string>
    <string name="Tuesday">‫الثلاثاء</string>
    <string name="Wednesday">‫الأربعاء</string>
    <string name="Thursday">‫الخميس</string>
    <string name="Friday">‫الجمعة</string>
    <string name="sherakat">شراكة بين شخصين</string>
    <string name="mother">اسم الأم</string>
    <string name="name">اسم</string>
    <string name="eghamat">الإقامة في مکان معین</string>
    <string name="birth">تاريخ الولادة</string>
    <string name="calender">تقویم کمکی</string>
    <string name="man_name">اسم السيد</string>
    <string name="woman_name">اسم السيدة</string>
    <string name="man_mother_name">اسم الأم يا سيدي</string>
    <string name="woman_mother_name">اسم والدة السيدة</string>
    <string name="natijeh">نتيجة</string>
    <string name="nafar_aval">اسم الشخص الأول</string>
    <string name="nafar_dovom">اسم الشخص الثاني</string>
    <string name="city">المدينة المعنية</string>
    <string name="address">تهران نواب ۸ پلاک ۲</string>
    <string name="email">info@sarketab.com</string>
    <string name="phone">۰۲۱ ۵۶۳۲ ۳۲۳ ۱۱</string>
    <string name="abjad_text">الرجاء الضغط وانقر على الزر</string>
    <string name="abjad_text1">اضغط على المفتاح ثلاث مرات في المجموع</string>
    <string name="click1">انقر أولاً</string>
    <string name="click2">النقرة الثانية</string>
    <string name="click3">النقرة الثالثة</string>
    <string name="show_estekhareh">عرض الإستخارة</string>
    <string name="help_calender">التقويم المساعد</string>
    <string name="man">رجل</string>
    <string name="woman">أنثى</string>
    <string name="dbj">از چيزي دلخور يا غمگين هستي . فكرش را از سر ت بيرون كن . در روزي به رويت گشوده است به زودي از يكي از خويشان چيزي به تو ميرسد متواضع باش و تكبر را كنار بگذار . در چند روز آينده خبر خوشي به تو ميرسد . اگر قصد سفر داري برو زيرا هم موجب شادي خودت و هم دوستان و آشنايان ميشود . به زودي كارها بر وفق مراد تو ميشود. </string>
    <string name="dbb">نيت خوبي كردي قصد انجام هر كاري را داري ،در آن به توفيق مي رسي ، به زودي از رنج و غم رهايي مي يابي . عيب تو اينست كه راز دلت را به همه ميگويي از اين كار پرهيز كن . در هر كاري به خدا توكل كن تا كارت كامل انجام شود. </string>
    <string name="djd">طالعت روشن است . موفقيت و سعادت به تو روي خواهد آورد پس اندوه به دل راه مده مال يا چيزي را از دست داده اي آن را به دست خواهي آورد . در كارها به خدا توكل كن و به فكر سود و زيانش نباش . تا چند روز آينده خبر خوشحال كننده اي خواهي شنيد . كارها بر وفق مراد تو پيش خواهد رفت و به مقصود خواهي رسيد انشا الله. </string>
    <string name="dad">قصد و نيتت خوب است . در رحمت به سويت باز ميشود از چشم زخم مردم ترسي به خود راه نده ،از آن در امان خواهي بود در هر كاري با اهلش مشورت كن در همه حال رضاي خدا و خلق خدا را در نظر داشته باش . بخت با تو يار است. </string>
    <string name="aab">اگر بيمار هستي به زودي سلامت خود را باز مي يابي و از سلامت و تندرستي بر خوردار ميشوي. به زودي زندگي خوبي با خانواده ات خواهي داشت در كار و معامله سود خوبي نصيب تو ميشود يكي از كساني كه به او نيكي ميكني به تو بدي ميكند . اما از كار خود پشيمان ميشود ، چون غوخوار توست اگر قصد سفر داري برو سفر خوبي خواهي داشت اگر چيزي را از دست داده اي به زودي به دست خواهي اورد اگر مسافري داري به زودي باز ميگردد اگر كسي از نزديكانت در زندان باشد به زودي آزاد ميشود اگر خواسته اي داري به زودي بر آورده ميشود از كارهاي بد حذر كن و در انجام كارهاي خير پيش قدم باش به خاطر انجام يك كار خوب و خير بر سر زبانها ميافتي . از جايي كه انتظار نداري پول يا چيزي به شما ميرسد پس خداوند را شكر گذار باش. </string>
    <string name="aba">ايمانت را قوي كن آنچه را كه آرزو و انتظار داري از خداوند طلب كن . به زودي كارهايت سر و سامان ميگيرد و به مرادت ميرسي . البته با همت و اراده ي خودت . از آنچه كه ميترسي ، در امنن هستي به خداوند توكل كن. </string>
    <string name="abj">به زودي مقصودت بر آورده ميشود و از غم رها ميشوي بايد شكر خدا را به جا آوري . افرادي هستند كه در عين دوستي ، غيبت تو را ميكنند . از اين افراد دوري كن . براي مقصود و نيتي كه داري بايد تلاش كني تا به ان برسي اگر كسي را رنجانده اي بايد از او دلجويي كني نيات خير داشته باش و در كارها مردانه پيش برو ، به خداوند توكل كن تا به مرادت برسي. </string>
    <string name="adb">طالع خوبي داري عاقبت به آنچه كه طالب هستي ميرسي از كار و بيع و شراكت سود خواهي برد . و رنج و مشكلت حل خواهد شد اگر طالب مال حلال باشي ، روز به روز كارت بهتر ميشود اگر قصد سفر داري برو ار آن سود خواهي برد اگر مسافر داري به سلامت باز ميگردد اگر گره يا مشكلي تا اينجا در زندگيت بوده رفع شده و بعد از اين زندگي خوبي خواهي داشت. </string>
    <string name="ajb">با اين نيتي كه كرده اي به خواسته ات ميرسي و خداوند تو را از غم و رنج ميرهاند ، پول و ثروت خوبي نصيب تو ميشود اگر با كسي منازعه و دعوا داري عاقبت به نفع تو خواهد شد اگر او با تو نمي سازد نگران نباش عاقبت رام خواهد شد اگر چيزي را از دست داده اي دوباره به دست مي آوري . از عبادت كوتاهي نكن تا كارت راست و هم قلبت مصفا شود . </string>
    <string name="bbb">نيت خوبي كرده اي طالعت با تو يار است و به توفيق و نشاط مي رسي . شكر خدا را در همه وقت به جا بياور اگر قصد ازدواج و يا معامله اي داروي و يا قصد شراكت و سرمايه گذاري داري بخت بت تو يار است ، به شرط انكه خود نيز همت كني . اگر با كسي در گير هستي عاقبت به نفع تو خاتمه مي يابد. </string>
    <string name="bbd">طالع خوبي است و نيتت بر آورده مي شود .به زودي از غمها رها ميشوي زيرا فالت نويد خير و سعادت ميدهد در كارهايت همچنان كوشا باش تا موفقيت و پيروزي نصيب شود مراقب بدخواهان باش و رازت را به هركس نگو با كسي خويشي يا دوستي خواهي كرد كه بسيار خوبست . در زندگي دو دل نباش . در نماز كاهلي نكن تا به مراد و مقصود برسي انشا الله. </string>
    <string name="bda">طالعت خوب است اما از قصد و نيتي كه داري دوري كن پشيماني در پي دارد . و غمگين خواهي شد . نبايد چنين قصدي را دنبال كني . شخصي سياه چهر هبا تو دشمني دارد از او بزر حذر باش . حدود دو سال است كه كارت خوب نيست، اما اگر صبر داشته باشي گشايش در كارت ديده ميشود و به مرادت ميرسي. </string>
    <string name="bdb">به زودي مشكل يا ناراحتيت بر طرف ميشود اما نبايد از كسي توقع خير و راحتي داشته باشي چيزي را از دست داده اي كه به زودي به دست مي آوري اگر با كسي دعوا و مخاصمه اي داري عاقبت به نفع تو تما م ميشود اگر چنين قصدي را اكنون داريد چند روزي صبر كنيد و سپس به آن اقدام كنيد به زودي گشايش و توفيقي نصيب تو ميشود و كارت بالا ميگيرد. </string>
    <string name="bjd">طالعت نيك است و نيتت بر آورده مي شود رازت را به كسي نگو . بايد مراقب بدخواهان باشي در كارت گشايش ديده ميشود به خئاوند رحمان اميدوار باش و با توكل به او به كار و زندگيت ادامه بده . اطمينان داشته باش كه روزهاي بهتري در پيش خواهي داشت . </string>
    <string name="jjj">آينده ي خوبي در انتظار توست اگر كمي همت كني ، زندگي خوبي خواهي داشت راه موفقيت براي تو باز است اگر نياز به كمك و يا حمايت كسي پيدا كني به آن پاسخ خواهد گفت ترفند بد خواهان را پشت سر ميگذاري و به مراد و خواسته ات ميرسي .در همه ي امور به خدا توكل كن. </string>
    <string name="jja">نيتت بر آورده ميشود و آنچه را كه طلب كرده اي به دست خواهي آورد گشايش مالي در فالت ديده ميشود اگر دست به كار جديدي زده اي توفيق خوبي همراه خواهد داشت . اگر نو رسيده اي داري قدمش براي تو خير است به توصيه و نصايح ديگران گوش كن تا به مراد برسي. </string>
    <string name="jda">به نظر ميرسد اهل فتنه هستي و فتنه بر پا ميكني . دست از خصومت بردار تا به غم مبتلا نشوي زبانت را نگه دار وگرنه دوستان و آشنايان از تو رنجيده و تو را ترك ميكنند . چند وقت ديگر گشايشي در كارت پيدا ميشود . از جايي كه انتظار نداري سود و نفعي به تو ميرسد براي آنكه به رفاه و سعادت برسي بايد كوشش و همت كني در چند روز آينده خبر خوشي به تو ميرسد و در پيش بعضي عزيز ميشوي. </string>
    <string name="jab">قصد و نيت بدي داري از آن دوري كن وگر نه پشيمان ميشوي بهتر است در پي كار خودت بماني و منتظر باشي . سعي كن با پرورش افكار و نيات خوب در سر ،سعادت را به روي خود باز كني و از الطاف خداوند در همه ي امور برخوردار شوي. </string>
    <string name="jba">طالعت نيكست با توكل به خداوند به خواسته ات مي رسي تغييراتي در پيش داري به خداوند توكل كن تا زودتر به مقصود برسي . به همه اعتماد نكن . چيزي يا خبري به تو ميرسد كه ممكن است خيلي با ارزش نباشد . ولي تو را خوشحال ميكند، آينده ي روشني داري ،براي رسيدن به آن راه زيادي نمانده اما بايد مراقب اعمال و رفتارت باشي. </string>
    <string name="jaa">به آنچه نيت كرده اي ميرسي آما بايد منتظر بماني . ارز اعمال بد دوري كن تا از غم و رنج در امان بماني . از فكر بد و پول حرام دوري كن ، خداوند روزي تو را به تو حواله كرده است . به زودي يك خبر خوشحال كننده به تو ميرسد كه تغييراتي در زندگي تو به وجود مي آورد اگر در همه ي امور به خداوند توكل كني به مقصودت مي رسي. </string>
    <string name="dbd">طالع خوبي داري و به خواسته ات ميرسي . روزي حلال به دست تو ميرسد قدرش را بدان سعي كن به كسي خيانت نكني ، چون صدمه ي بزرگي خواهي خورد . اگر قصد سفر دوري داري ،از آن منصرف شو زيرا به رنج و زحمت خواهي افتاد و از كار و تلاش غفلت مكن تا به مقصود برسي . انشا الله </string>
    <string name="ddd">نيت خوبي كردي به خواسته و آرزويت مي رسي . در روزي به رويت گشوده ميشود وبه سعادت و خوشي دست مي يابي . اگر قصد سفر يا معامله اي داري به آن عمل كن به نفع تو خواهد بود به ديگران اعتماد كني اما رازت را به هر كس مگو به زودي خبر خوشي به تو ميرسد. </string>
    <string name="ddb">از اين نيت كه كرده اي بايد صبر كني تا مرادت حاصل شود .اگر قصد سفر داري برو ، نفع خوبي از ان خواهي برد اگر قصد انجام كار خيري داري به آن عمل كن مراقب باش تا گناه نكني . براي بهتر شدن كارها به خداوند توكل كن. </string>
    <string name="djb">در چند روز آينده خبر خوشي به تو ميرسد يك طلب سوخته و يا يك چيز گم شده را به دست مي آوري . كارها بر وفق مراد تو خواهد بود سود يا پول زيادي نصيبت ميشود . با دوستان خوب مشورت كن ، چون از راهنمايي آنها سود خواهي برد مال حلال خوبي به دست مي آوري قدر آن را بدان و شكر خدا كن . ميتواني از آن به افراد مستحق احسان كني تا اجر معنوي نصيبت شود. </string>
    <string name="dba">طالعت روشن است . تشويش را از خودت دور كن . كارها بر وفق مراد تو خواهد شد اگر چيزي را از خدا طلب كردي به آن مي رسي . اگر قصد سفر و يا انجام معامله اي داري ، آن را انجام بده برايت سودبخش است. </string>
    <string name="aaa">به زودي گره ي كارت باز ميشود و به هر خواسته اي كه داري ميرسي ممكن است كسي به زودي به جمع خانواده ي شما افزوده شود دوستان خوبي داري به وقت نياز با آنها مشورت كن . تا حدي از شر بدخواهان در امان هستي . در چند روز آينده يك خبر خوشحال كننده ميشنويد . اگر ارزو و يا نيتي داري به آن ميرسي . در كارهايت به خدا توكل كن تا به اميد حق كارهايت درست به انجام برسد رازت را به هر كس نگو خوددار باش و از بديها پرهيز كن . آنچه را كه انتظار داري انشا الله به زودي به دست خواهي آورد. </string>
    <string name="aad">روزهاي خوبي در پيش داري . نا اميد نباش . از كسي جز خدا ياري نخواه و از رحمت حق غافل نشو افكار و نيات پاك در سر داشته باش تا بخت به تو روي اورد. و گشايشي در كارت ايجاد شود . از از افراد بد دوري كن غيبت نكن هدف يا كاري را كه داري دنبال كن تا به توفيق برسي . انشا االله . </string>
    <string name="problem">اطلاعات به درستی دریافت نشد دوباره تلاش کنید</string>
    <string name="tryAgain">تلاش مجدد</string>
    <string name="lastUpdate">تاریخ آخرین آپدیت</string>
    <string name="zero">0</string>
    <string name="hamzad_queen">اسم التوأم الملاك:</string>
    <string name="hamzad_jen">اسم الجوزاء التوأم:</string>
    <string name="not_found">لا يوجد لا تجد</string>
</resources>