<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:background="@drawable/pattern_background">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:layout_width="@dimen/image_back_w"
        android:layout_height="@dimen/image_back_h"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:id="@+id/ghaeb_back"
        app:srcCompat="@drawable/ic_back_activity"
        tools:ignore="VectorDrawableCompat"
        />

    <com.thebrownarrow.customfont.CustomFontTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/hamzad"
        android:textColor="#fff"
        android:layout_marginEnd="10dp"
        android:textSize="@dimen/font_size_input"
        app:custom_typeface="@string/font_light" />
</RelativeLayout>


            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="@dimen/image_size_head"
            android:layout_height="@dimen/image_size_head"
            android:background="@drawable/shape_circle_dark"
            android:padding="@dimen/image_padding_head"
            android:id="@+id/icon_layout"
            >
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_hamzad"
                tools:ignore="VectorDrawableCompat" />
        </RelativeLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#D8D8D8"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="@dimen/margin_left_right_card"
            android:layout_marginRight="@dimen/margin_left_right_card"
            app:cardCornerRadius="10dp"
            android:padding="10dp"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingEnd="@dimen/margin_left_right_card"
                android:paddingStart="@dimen/margin_left_right_card"
                android:paddingBottom="5dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    >

                    <com.thebrownarrow.customfont.CustomFontEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="right"
                        android:hint="@string/name"
                        android:id="@+id/hamzad_name"
                        android:textSize="@dimen/font_size_input"
                        app:custom_typeface="@string/font_light"
                        android:maxLength="25"
                        android:maxLines="1"
                        android:lines="1"
                        android:singleLine="true"
                        android:importantForAutofill="no"/>

                    <RelativeLayout
                        android:layout_width="60dp"
                        android:layout_height="30dp"
                        android:background="@drawable/shape_rectangle"
                        >
                        <com.thebrownarrow.customfont.CustomFontTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:gravity="center"
                            android:layout_alignParentStart="true"
                            android:text="0"
                            android:id="@+id/hamzad_name_sum"
                            android:textColor="#fff"
                            android:layout_marginStart="10dp"
                            android:layout_centerHorizontal="true"
                            android:textSize="@dimen/font_size_input"
                            app:custom_typeface="@string/font_light" />
                    </RelativeLayout>
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_found"
                        android:padding="10dp"
                        android:textSize="@dimen/font_size_hamzad"
                        android:textAlignment="center"
                        android:id="@+id/text_freshteh" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:padding="10dp"
                        android:text="@string/hamzad_queen"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/font_size_hamzad" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_found"
                        android:padding="10dp"
                        android:textSize="@dimen/font_size_hamzad"
                        android:textAlignment="center"
                        android:id="@+id/text_jen" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="@dimen/font_size_hamzad"
                        android:textAlignment="center"
                        android:text="@string/hamzad_jen"
                        android:textColor="@color/colorAccent"
                      />
                </LinearLayout>



            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>